MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Payment_Response__c/DirectDebit_Payment_Response__c.object-meta.xml
<CustomObject>
    <label>DirectDebit_Payment_Response</label>
    <nameField>
        <displayFormat>DPR-{00000000}</displayFormat>
        <label>DirectDebit_Payment_Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DirectDebit_Payment_Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>