MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Payment_Response__c/fields/Claimed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Claimed_Amount__c</fullName>
    <label>Claimed_Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>