MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Payment_Response__c/fields/Customer_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reference_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Reference Number</label>
    <length>250</length>
    <type>Text</type>
</CustomField>