MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Payment_Response__c/fields/DDA_REF_NO__c.field-meta.xml
<CustomField>
    <fullName>DDA_REF_NO__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DDA_REF_NO</label>
    <length>250</length>
    <type>Text</type>
</CustomField>