MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Payment_Response__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason</label>
    <length>250</length>
    <type>Text</type>
</CustomField>