MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Payment_Response__c/fields/Ref_No__c.field-meta.xml
<CustomField>
    <fullName>Ref_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ref_No</label>
    <length>250</length>
    <type>Text</type>
</CustomField>