MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Payment_Response__c/fields/Retrail_Count__c.field-meta.xml
<CustomField>
    <fullName>Retrail_Count__c</fullName>
    <label>Retrail Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>