MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Payment_Response__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DDA_REF_NO__c</columns>
    <columns>Ref_No__c</columns>
    <columns>Settled_Amount__c</columns>
    <columns>Status__c</columns>
    <columns>Settlement_Date__c</columns>
    <columns>Claimed_Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>